--- a/src/index.scss
+++ b/src/index.scss
@@ -20,8 +20,66 @@ body,
     height: 100%;
 }
 
+label {
+    span {
+        font-weight: bold;
+        color: #333;
+        margin-bottom: 10px;
+    }
+}
 
 div#app {
     font-family: "SF Pro Text", -apple-system, "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, "Lucida Grande",
         sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    display: grid;
+    grid-template-rows: 150px 50px 1fr 50px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    input,
+    textarea {
+        padding: 5px;
+    }
+    input {
+        width: 100%;
+    }
+    textarea {
+        resize: none;
+        width: 100%;
+        height: 100%;
+    }
+    header {
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    #regex {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+    }
+    #corpus {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+    #output {
+        grid-column: 2 / 3;
+        grid-row: 3 / 4;
+        position: relative;
+        textarea {
+            width: 100%;
+            height: 100%;
+        }
+        #matchCount {
+            background-color: #222;
+            color: white;
+            position: absolute;
+            top: 30px;
+            right: 10px;
+            padding: 5px 8px;
+            border-radius: 20px;
+            font-size: 0.6em;
+            font-weight: 500;
+        }
+    }
 }
