--- a/src/index.scss
+++ b/src/index.scss
@@ -35,12 +35,24 @@ div#app {
     -moz-osx-font-smoothing: grayscale;
 
     display: grid;
-    grid-template-rows: 150px 50px 1fr 50px;
+    grid-template-rows: 150px 50px 1fr 30px;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    grid-gap: 30px;
     input,
     textarea {
         padding: 5px;
+    }
+    button {
+        background-color: white;
+        color: #222;
+        border: none;
+        border: 1px solid #222;
+        text-transform: uppercase;
+        font-weight: 700;
+        border-radius: 20px;
+        padding: 2px 10px;
+        font-size: 0.6em;
+        margin: 5px 5px 0px 0;
     }
     input {
         &:focus {
@@ -53,6 +65,7 @@ div#app {
             }
         }
     }
+
     textarea {
         resize: none;
         width: 100%;
@@ -89,5 +102,12 @@ div#app {
             font-size: 0.6em;
             font-weight: 500;
         }
+    }
+    footer {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        display: flex;
+        justify-content: center;
+        align-items: ce;
     }
 }
