--- a/src/index.scss
+++ b/src/index.scss
@@ -33,9 +33,8 @@ div#app {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
     display: grid;
-    grid-template-rows: 150px 50px 1fr 30px;
+    grid-template-rows: 125px 50px 1fr 30px;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
     input,
@@ -50,9 +49,15 @@ div#app {
         text-transform: uppercase;
         font-weight: 700;
         border-radius: 20px;
-        padding: 2px 10px;
+        padding: 4px 9px;
         font-size: 0.6em;
         margin: 5px 5px 0px 0;
+        transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+        cursor: pointer;
+        &.active {
+            background-color: #222;
+            color: white;
+        }
     }
     input {
         &:focus {
