--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,11 @@ body,
     height: 100%;
 }
 
+#app {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
 label {
     span {
         font-weight: bold;
@@ -34,7 +39,7 @@ div#app {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     display: grid;
-    grid-template-rows: 125px 50px 1fr 30px;
+    grid-template-rows: 125px 75px 1fr 30px;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 30px;
     input,
@@ -112,7 +117,9 @@ div#app {
         grid-column: 1 / 3;
         grid-row: 4 / 5;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: ce;
+        font-size: 0.75em;
+        text-transform: uppercase;
     }
 }
